# sst

./: .gitignore  .gitmodules  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  docker-compose.yml  hist.py  sst-dashboard.py
caddy/: Caddyfile
dashboard/: .dockerignore  Dockerfile  balance.py  cache.Dockerfile  cache.py  dashboard.Dockerfile  dashboard.py  database.py  description.py  extremes.py  fft.py  generate.py  leverage.py  main.py  map.py  psst.py  pytest.ini  requirements.txt  rs256.pem  rs256.pub  server.py  sessions.py  sst-dashboard.py  travel.py  velocity.py
dashboard/app/: __init__.py  extensions.py
dashboard/app/api/: __init__.py  common.py  routes.py
dashboard/app/api/board/: __init__.py  routes.py
dashboard/app/auth/: routes.py
dashboard/app/frontend/: __init__.py  routes.py
dashboard/app/main/: routes.py
dashboard/app/models/: __init__.py  blocklist.py  board.py  calibration.py  linkage.py  session.py  session_html.py  setup.py  synchronizable.py  track.py  user.py
dashboard/app/static/: auth.js  common.css  drawer.css  layout-double.css  layout-single.css  modal.css  sessionlist.css  tabs.css  update.js
dashboard/app/telemetry/: balance.py  description.py  fft.py  leverage.py  map.py  psst.py  session_html.py  travel.py  velocity.py
dashboard/app/templates/: base.html  dashboard.html  index.html  sessions.html
dashboard/app/utils/: converters.py  expr.py  first_init.py
dashboard/frontend/: package-lock.json  package.json  webpack.common.js  webpack.dev.js
dashboard/frontend/src/: index.js
dashboard/gosst/: go.sum  gosst.go
dashboard/migrations/versions/: 01246d1f3687_add_token_blocklist.py  1ecf18307d08_add_synchronizable_base.py  5c40381ea62d_make_session_data_nullable.py  705e4bb253c8_add_token_blocklist.py  7f09aaaf3dbc_switch_to_uuid_primary_keys.py  8e4c33e09ccd_add_suspension_properties_to_session.py  ea6262808b9d_initial_migration.py  ef9b3861a756_change_pow_operator_to_caret_symbol.py
dashboard/static/: alerts.css  common.css  dashboard-onesuspension.css  dashboard.css  layout-double.css  layout-single.css  tabs.css  update.js
dashboard/static/favicon_io/: about.txt
dashboard/templates/: dashboard.html  empty.html  index.html  sessions.html
dashboard/tests/: conftest.py  linkage.txt  session.js  test.SST  test_auth.py  track.gpx  track.json
dashboard/tests/api/: test_board.py  test_calibration.py  test_calibration_method.py  test_linkage.py  test_session.py  test_setup.py  test_sync.py  test_track.py
firmware/: .clang-format  CMakeLists.txt  CMakePresets.json
firmware/pico/: CMakeLists.txt  hw_config.c  sst.c
firmware/pico-w/: CMakeLists.txt  CMakePresets.json  config.c  ds3231.c  hw_config.c  list.c  microsd.c  msc_disk.c  ntp.c  pio_i2c.c  pushbutton.c  sst.c  tcpclient.c
firmware/pico-w/include/: ds3231.h  hardware_config.h  list.h  lwipopts.h  ntp.h  pin_config.h  pio_i2c.h  pushbutton.h  sst.h  tcpclient.h
firmware/src/fs/: microsd.c
firmware/src/fw/: hardware_config.h  main.c  sst.h
firmware/src/msc/: msc_disk.c  sst_usb_descriptors.c  tusb_config.h
firmware/src/net/: lwipopts.h  tcpclient.c  tcpclient.h  tcpserver.c  tcpserver.h
firmware/src/ntp/: ntp.c  ntp.h
firmware/src/pio_i2c/: i2c.pio  pio_i2c.c
firmware/src/rtc/: ds3231.c  ds3231.h
firmware/src/sensor/: linear.c  rotational.c  sensor.h
firmware/src/ui/: pushbutton.c  pushbutton.h
firmware/src/util/: config.c  config.h  list.c  list.h  log.h
gosst/: Dockerfile  Makefile  go.mod  go.sum  go.work  gosst.go  psstfile.go
gosst/calibration_methods/: as5600-isosceles-triangle.json  as5600-triangle.json
gosst/cmd/gosst-file/: gosst-file.go
gosst/cmd/gosst-http/: boards.go  calibrationmethods.go  calibrations.go  gosst-http.go  linkages.go  sessions.go  setups.go  tracks.go
gosst/cmd/gosst-tcp/: gosst-tcp.go
gosst/formats/: go.mod  go.sum
gosst/formats/psst/: airtimes.go  calibration.go  psst.go  stroke.go
gosst/formats/sst/: sst.go
gosst/internal/common/: common.go
gosst/internal/db/: db.go  queries.go
gosst/internal/psst/: airtimes.go  calibration.go  psstfile.go  stroke.go
gosst/internal/schema/: schema.go
gosstcp/: go.sum  gosstcp.go  psstfile.go
init/: Dockerfile
pico/sufni-suspension-telemetry/: CMakeLists.txt  msc_disk.c  sst.c  sst_usb_descriptors.c
pico/sufni-suspension-telemetry/lib/as5600/: CMakeLists.txt  as5600.c
pico/sufni-suspension-telemetry/lib/as5600/include/: as5600.h
sample_data/: 00134.SST  00135.SST  00136.SST
sample_data/20220724/: 00083.SST  00084.SST  00085.SST  00086.SST  00087.SST  00088.SST  00089.SST  00090.SST  00091.SST  00092.SST  00095.SST  00096.SST  00097.SST  00098.SST  00099.SST  00100.SST  00101.SST  content.txt
sample_data/20220724_v2/: 00083.SST  00084.SST  00085.SST  00086.SST  00087.SST  00088.SST  00089.SST  00090.SST  00091.SST  00092.SST  00093.SST  00094.SST  00095.SST  00096.SST  00097.SST  00098.SST  00099.SST  00100.SST  00101.SST
sample_data/data/: 00132.SST  00133.SST  00142.SST  00143.SST  00144.SST
sample_data/leverage-ratio/: clash2022_lr_dynamic.txt  clash2022_lr_sensitive.txt  clash2022_lr_sensitive__raw.txt
teensy/: seeed_arduino_as5600.diff
teensy/suspension-telemetry_i2c/: suspension-telemetry_i2c.ino
test_utils/: gosst-client.py  import_psst.py  import_sst.py  tcpserver_client.py
test_utils/byb2sst/: go.mod  go.sum  main.go
test_utils/gosst-tcp-dummy/: go.mod  go.sum  gosst-tcp.go
test_utils/psst-python/: psst.py  psst_process_template.py
test_utils/sample_csv/linkage/: test-linkage_1.csv  test-linkage_2.csv
test_utils/sample_json/calibration/: test-calibration.json
test_utils/sample_json/calibration_method/: as5600-isosceles-triangle.json  as5600-isosceles-triangle_opt.json  as5600-triangle.json  as5600-triangle_opt.json  fraction.json  linear.json  percentage.json
test_utils/sample_json/linkage/: test-linkage_1.json  test-linkage_2.json
test_utils/sample_sst/: 00642.SST  00643.SST  00646.SST  00647.SST  00648.SST  00649.SST  notes.txt
ui/: sst-graph.py
ui/assets/: custom.css
(+44 files in other folders)
